http/tests/cookies/third-party-cookie-relaxing.html is flaky on bots https://bugs.webkit.org/show_bug.cgi?id=138098

Reviewed by Anders Carlsson.

Source/WebCore:

* platform/network/cf/NetworkStorageSessionCFNet.cpp:
(WebCore::NetworkStorageSession::switchToNewTestingSession):
Create a separate session for each WKTR/DRT process when testing.

Source/WebKit2:

* NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
* WebProcess/com.apple.WebProcess.sb.in:
Update for the new name of testing session. Memory regions are now of the form
"WebKit Test-<pid>-0".

LayoutTests:

* platform/mac-wk1/TestExpectations: Removed the test from expectations. It's still
skipped on WK2, because we don't yet implement the necessary WKTR functionality.


Canonical link: https://commits.webkit.org/155960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175232 268f45cc-cd09-0410-ab3c-d52691b4dbfc